--- a/client/.env
+++ b/client/.env
@@ -1,6 +1,6 @@
 # API DATABASE LOCAL
-# VITE_API_LOCAL = https://api.simrspuskesad.com
-VITE_API_LOCAL = http://localhost:8000
+VITE_API_LOCAL = https://api.simrspuskesad.com
+#VITE_API_LOCAL = http://localhost:8000
 
 # API SELURUH RUMAH SAKIT
 VITE_SINDHU_TRISNO = https://dashboard.rssindhutrisnopalu.com
@@ -51,3 +51,4 @@ VITE_SOEHARSONO = https://dashboardtpt.id
 VITE_BANSIDOARJO = https://puskesad.rsdktsda.co.id/login
 VITE_LAMPUNGIV = https://rsdktlampung.com/dashboard-monitoring/
 VITE_SOEJONO = https://dashboard.rstdrsoedjono.co.id/
+VITE_ISMOYO = https://rsismoyo.simkeskhanza.com/dashismoyo/
