--- a/client/.env
+++ b/client/.env
@@ -25,7 +25,7 @@ VITE_LAHAT = ""
 VITE_NOESMIR = https://rsdktbaturaja.com/dashnoesmir
 VITE_BRATANATA = https://dash.morbis.id/v3/dashboard/index
 VITE_BHAKTI_WIRA = https://beta.medminutes.io/
-VITE_BINJAI = ""
+VITE_BINJAI = "https://rumkitbinjai.com"
 VITE_PEKAN_BARU = ""
 VITE_REKSO = https://dashboard.rumkitreksodiwiryo.com/app/
 VITE_UDAYANA = https://puskesad.rumahsakitudayanadenpasar.com/login
@@ -52,3 +52,11 @@ VITE_BANSIDOARJO = https://puskesad.rsdktsda.co.id/login
 VITE_LAMPUNGIV = https://rsdktlampung.com/dashboard-monitoring/
 VITE_SOEJONO = https://dashboard.rstdrsoedjono.co.id/
 VITE_ISMOYO = https://rsismoyo.simkeskhanza.com/dashismoyo/
+VITE_AKAGANI = https://dashboard.rumahsakitakgani.co.id
+VITE_MADIUN = https://103.165.208.178/webapps/
+VITE_BUKITTINGGI = https://dashboard.rstbukittinggi.com/apps/SIMpel/
+VITE_SIDEMPUAN = https://simrs.rumkittnipsp.com/
+VITE_KEDIRI = https://puskesad.rsdktkediri.id/
+VITE_GUNTUNG = https://guntungpayung-dashboard-stg.sanatasystem.net
+VITE_AWANG = https://simpus.rstentarasmd.com/
+VITE_CIJANTUNG = https://rscijantung.id/dashboard
