--- a/client/.env
+++ b/client/.env
@@ -60,3 +60,4 @@ VITE_KEDIRI = https://puskesad.rsdktkediri.id/
 VITE_GUNTUNG = https://guntungpayung-dashboard-stg.sanatasystem.net
 VITE_AWANG = https://simpus.rstentarasmd.com/
 VITE_CIJANTUNG = https://rscijantung.id/dashboard
+VITE_IGNATIUS = https://c1695987854.trustmedis.id
